<resources>
    //Вхід
    <string name="app_name">TeaBuddy</string>
    <string name="WelcomeText">Вітаємо!</string>
    <string name="HintName">Ваше ім\'я</string>
    <string name="LoginButton">Увійти</string>
    <string name="HintPassword">Пароль</string>
    <string name="HintEmail">Пошта</string>
    <string name="RegisterName">Зареєструватись</string>
    <string name="LoginName">З поверненням!</string>
    <string name="ForgotPassword">Забули пароль?</string>
    <string name="RegisterText">Вперше у нас?</string>
    <string name="RegisterHi">Привіт!</string>
    //Реєстрація
    <string name="RegName">Ім\'я</string>
    <string name="loginName">Вхід</string>
    <string name="registerName">Реєстрація</string>
    <string name="oldUserButton">Вже зареєстровані?</string>
    <string name="RegRePassowrd">Повторіть пароль</string>
    <string name="RegButton">Зареєструватись</string>
    <string name="RegNameHint">Ім\'я</string>
    <string name="InvEmail">Ой,такої пошти я не знаю...</string>
    <string name="InvPasswrd">Схоже у паролі помилка</string>
    <string name="InvRePasswrd">Ой, паролі трошки не співпали!</string>
    <string name="EmptFld">Заповніть поля будь ласька :)</string>
    <string name="InvEmailFormat">Пошта дуже дивно виглядає!Ви певні?</string>
    <string name="EmailRegistered">Ой, хтось вже живе за цією адресою! Схоже, пошта зайнята.</string>
    <string name="WeakPswrd">Може трошки ускладнити пароль?</string>
    <string name="BasicError">Схоже у мене виникли якісь проблеми...</string>
    <string name="IncrShortPswrd">Пароль надто коротенький. Треба довший (6 символів)</string>
    //Навігація_Низ
    <string name="HomeNav">Головна</string>
    <string name="ToolsNav">Готувати</string>
    <string name="ProfileNav">Профіль</string>
    <string name="ShelfNav">Поличка</string>
    <string name="Mapnav">Мапа</string>

    <string name="LogOut">Вийти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Деталі чай
    <string name="HintSearchBar">Я шукаю...</string>
    <string name="AboutDetails">Про чай</string>
    <string name="BreewingTime">хв</string>
    <string name="Aboutingredients">Інгрідіенти</string>


    <string name="NoCaffeine">Відсутній</string>
    <string name="LowCaffeine">Низький</string>
    <string name="HighCaffeine">Середній</string>
    <string name="MediumCaffeine">Високий</string>
    <string name="MapNav">Мапа</string>
    <string name="NotFoundText">Ми нічого не знайшли...</string>

</resources>