<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolor"
    tools:context=".Teas.TeaDetailsActivity">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pageLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/maincolor"
            tools:context=".Teas.TeaDetailsActivity">


            <ImageView
                android:id="@+id/teaImage"

                android:layout_width="match_parent"
                android:layout_height="435dp"

                android:layout_marginTop="55dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/infoBG"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="-30dp"
                android:background="@drawable/boxcorners"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teaImage"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintWidth_percent="1" />

            <TextView
                android:id="@+id/teaName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"


                android:layout_marginTop="45dp"
                android:paddingTop="8dp"
                android:text="Назва чаю"
                android:textColor="@android:color/black"


                android:textSize="20sp"
                android:textStyle="bold"


                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/infoBG"
                app:layout_constraintVertical_bias="0.002" />

            <androidx.cardview.widget.CardView
                android:id="@+id/infoPanel"
                android:layout_width="0dp"
                android:layout_height="90dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toTopOf="@+id/infoBG"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/infoBG"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintWidth_percent="0.80">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/infoPanel2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/infoPanelBg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/thidcolor" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="3dp"
                        android:layout_height="0dp"
                        app:layout_constraintHeight_percent="0.8"
                        android:background="@drawable/roundstyle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                        app:layout_constraintHorizontal_bias="0.533"
                        app:layout_constraintStart_toEndOf="@+id/infoTimeLayout"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/line2"
                        android:layout_width="3dp"
                        android:layout_height="0dp"
                        android:background="@drawable/roundstyle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/infoCaffeineLayout"
                        app:layout_constraintHeight_percent="0.8"
                        app:layout_constraintHorizontal_bias="0.56"
                        app:layout_constraintStart_toEndOf="@+id/linearLayout"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/infoCaffeineLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_marginEnd="50dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/infoPanelBg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/linearLayout"
                        app:layout_constraintTop_toTopOf="@+id/infoPanelBg"
                        app:layout_constraintVertical_bias="0.523">

                        <View
                            android:id="@+id/caffeineIcon"
                            android:layout_width="55dp"
                            android:layout_height="40dp"
                            android:background="@drawable/coffee_beans"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/levelCaffeine"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="Кофеїн"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/infoPanelBg"
                        app:layout_constraintStart_toEndOf="@+id/infoTimeLayout"
                        app:layout_constraintTop_toTopOf="parent">

                        <View
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/temperatureicon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="°C"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/infoTimeLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/infoPanelBg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <View
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/timeicon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/prepareTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/BreewingTime"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"

                android:layout_marginBottom="10dp"
                android:elevation="90dp"
                android:justificationMode="inter_word"
                android:text="Про чай детально
"

                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/infoBG"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameDetails"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/nameDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"


                android:layout_marginTop="10dp"
                android:text="@string/AboutDetails"
                android:textColor="@android:color/black"


                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teaName" />


            <TextView
                android:id="@+id/nameIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"


                android:layout_marginTop="10dp"
                android:text="@string/Aboutingredients"


                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescription" />

            <TextView
                android:id="@+id/teaType"
                android:layout_width="194dp"
                android:layout_height="33dp"
                android:backgroundTint="@color/thidcolor"
                android:backgroundTintMode="src_over"
                android:background="@drawable/rounded_text"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="Вид чаю"
                android:textAlignment="center"
                android:textColor="@android:color/black"

                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/infoPanel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameIngredients"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/top_panel"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#759087"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <at.markushi.ui.CircleButton
            android:id="@+id/back_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:src="@drawable/back_arrow"
            app:cb_color="#8AA49B"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </at.markushi.ui.CircleButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>